--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-google-site-verification: google8d92603986af7d50.html
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
@@ -11,7 +11,7 @@ google-site-verification: google8d92603986af7d50.html
     <link rel="stylesheet" href="assets/css/Simple-Slider-Simple-Slider.css">
 </head>
 
-<body>
+<body>google-site-verification: google8d92603986af7d50.html
     <!-- Start: Navbar Centered Links -->
     <nav class="navbar navbar-light navbar-expand-md sticky-top navbar-shrink py-3" id="mainNav" style="padding-top: 74px;padding-bottom: 0px;margin-top: -8px;margin-bottom: -24px;">
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="/" style="padding-bottom: 65px;margin-bottom: -38px;"><img src="assets/img/logo.png" height="34" width="141"><span class="fs-6" style="padding-left: 0px;padding-right: 0px;margin-bottom: -122px;padding-bottom: 0px;margin-right: -66px;margin-left: -135px;padding-top: 0px;margin-top: -65px;">RAYYAN GROUP</span>
