--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="assets/css/Simple-Slider-Simple-Slider.css">
 </head>
 
-<body>google-site-verification: google8d92603986af7d50.html
+<body>
     <!-- Start: Navbar Centered Links -->
     <nav class="navbar navbar-light navbar-expand-md sticky-top navbar-shrink py-3" id="mainNav" style="padding-top: 74px;padding-bottom: 0px;margin-top: -8px;margin-bottom: -24px;">
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="/" style="padding-bottom: 65px;margin-bottom: -38px;"><img src="assets/img/logo.png" height="34" width="141"><span class="fs-6" style="padding-left: 0px;padding-right: 0px;margin-bottom: -122px;padding-bottom: 0px;margin-right: -66px;margin-left: -135px;padding-top: 0px;margin-top: -65px;">RAYYAN GROUP</span>
