--- a/rgi.html
+++ b/rgi.html
@@ -116,7 +116,7 @@
                                 <div class="d-flex"><img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="50" height="50" src="assets/img/team/smecorp.png">
                                     <div>
                                         <p class="fw-bold text-primary mb-0">Pendaftaran SME Corp.</p>
-                                        <p class="text-muted mb-0" style="font-size: 13px;"><span style="background-color: transparent;">0-00519874 (Rayyan Group Industry)&nbsp;&nbsp;</span><br></p>
+                                        <p class="text-muted mb-0" style="font-size: 13px;"><span style="background-color: transparent;">SME221018001 (Kategori Kecil Status PKS)</span><br></p>
                                     </div>
                                 </div>
                             </div>
