--- a/rgi.html
+++ b/rgi.html
@@ -165,7 +165,7 @@
                                 <div class="d-flex"><img class="rounded-circle flex-shrink-0 me-3 fit-cover" width="50" height="50" src="assets/img/team/telelogo.png">
                                     <div>
                                         <p class="fw-bold text-primary mb-0">Nombor Telefon</p>
-                                        <p class="text-muted mb-0" style="font-size: 13px;"><span style="background-color: transparent;">+6012-592 5696 (Pengarah Urusan)</span><br><br><span style="background-color: transparent;">+6018-222 3439 (Ketua Pegawai Eksekutif CEO)</span><br><br><span style="background-color: transparent;">+605-243 4849 (Pejabat)</span><br></p>
+                                        <p class="text-muted mb-0" style="font-size: 13px;"><span style="background-color: transparent;">+6 012-592 5696 (Pengarah Urusan)</span><br><span style="background-color: transparent;">+60 18-222 3439 (Ketua Pegawai Eksekutif CEO)</span><br><span style="background-color: transparent;">+60 5-243 4849 (Pejabat)</span><br><span style="background-color: transparent;">+60 10-529 5696 (Pejabat)</span></p>
                                     </div>
                                 </div>
                             </div>
